--- a/books/books.html
+++ b/books/books.html
@@ -25,7 +25,7 @@
 <ul>
 <li>S001 曹天元 上帝掷骰子吗：量子物理史话
 <li>S002 周有光 我的人生故事
-<li><a href="S062.html">S062 心经</a>
+<li><a href="books/S062.html">S062 心经</a>
 <li>S064 Jared Diamond 枪炮、病菌与钢铁 Guns, Germs, and Steel (1997)
 <li>S065 麦肯锡教我的思考武器：从逻辑思考到真正解决问题 (2014)
 <li>S066 麦肯锡12堂工作思维课 
@@ -35,6 +35,6 @@
 
 <ul>
 <li>B017 Cal Newport, So good they can't ignore you
-<li><a href="B039.html">B039 Eliane E. Aron, The highly sensitive child, 2002</a>
+<li><a href="books/B039.html">B039 Eliane E. Aron, The highly sensitive child, 2002</a>
 </ul>
 </body>
