--- a/books/books.html
+++ b/books/books.html
@@ -24,12 +24,12 @@
 
 <ul>
 <li>S001 曹天元 上帝掷骰子吗：量子物理史话
-<li><a href="books/S002.html">S002 周有光 我的人生故事</a>
-<li><a href="books/S004.html">S004 傅佩荣 国学的天空</a>
-<li><a href="books/S049.html">S049 山下英子 断舍离</a>
-<li><a href="books/S056.html">S056 博多·舍费尔 财务自由之路</a>
-<li><a href="books/S062.html">S062 心经</a>
-<li><a href="books/S063.html">S063 硅谷钢铁侠: 埃隆·马斯克的冒险人生</a>
+<li><a href="books/S002.html">S002</a> 周有光 我的人生故事
+<li><a href="books/S004.html">S004</a> 傅佩荣 国学的天空
+<li><a href="books/S049.html">S049</a> 山下英子 断舍离
+<li><a href="books/S056.html">S056</a> 博多·舍费尔 财务自由之路
+<li><a href="books/S062.html">S062</a> 心经
+<li><a href="books/S063.html">S063</a> 硅谷钢铁侠: 埃隆·马斯克的冒险人生
 <li>S064 Jared Diamond 枪炮、病菌与钢铁 Guns, Germs, and Steel (1997)
 <li>S065 麦肯锡教我的思考武器：从逻辑思考到真正解决问题 (2014)
 <li>S066 麦肯锡12堂工作思维课 
@@ -38,10 +38,12 @@
 <h3>English</h3>
 
 <ul>
-<li><a href="books/B009.html">Adele Daber, How to Talk So Kids Will Listen and Listen So Kids Will Talk</a>
-<li><a href="books/B011.html">Tim Ferriss, The 4-hour Workbook</a>
-<li><a href="books/B012.html">Tim Ferriss, Tools of Titans</a>
+<li><a href="books/B009.html">B009</a> Adele Daber, How to Talk So Kids Will Listen and Listen So Kids Will Talk
+<li><a href="books/B011.html">B011</a> Tim Ferriss, The 4-hour Workbook
+<li><a href="books/B012.html">B012</a> Tim Ferriss, Tools of Titans
 <li>B017 Cal Newport, So good they can't ignore you
-<li><a href="books/B039.html">B039 Eliane E. Aron, The highly sensitive child, 2002</a>
+<li><a href="books/B022.html">B022</a> Ray Dalio, Principles
+<li><a href="books/B023.html">B023</a> V.Anton Spraul, Think Like a Programmer: An Introduction to Creative Problem Solving
+<li><a href="books/B039.html">B039</a> Eliane E. Aron, The highly sensitive child, 2002
 </ul>
 </body>
