Update css max char per line

--- a/books/books.html
+++ b/books/books.html
@@ -16,8 +16,6 @@
 </p>
 
 <hr>
-<meta charset="UTF-8">
-
 <h2>My Library 我的图书馆</h2>
 
 <h3>中文书</h3>
@@ -41,9 +39,22 @@
 <li><a href="books/B009.html">B009</a> Adele Daber, How to Talk So Kids Will Listen and Listen So Kids Will Talk
 <li><a href="books/B011.html">B011</a> Tim Ferriss, The 4-hour Workbook
 <li><a href="books/B012.html">B012</a> Tim Ferriss, Tools of Titans
+<li>B013 Tim Ferriss, The 4-hour body
+<li>B014 Victor Frankl, Man's search for meaning
+<li>B015 Steven Weber, The success of open source
+<li>B016 Peter Thiel, Zero to one
 <li>B017 Cal Newport, So good they can't ignore you
+<li>B018 Walter Issacson, Steve Jobs
+<li>B019 Guy Kawasaki, The art of the start
+<li>B020 Robert C. Pozen, Extreme productivity
 <li><a href="books/B022.html">B022</a> Ray Dalio, Principles
 <li><a href="books/B023.html">B023</a> V.Anton Spraul, Think Like a Programmer: An Introduction to Creative Problem Solving
+<li>B034 William Strunk, The Elements of Style
+<li>B035 Don Tapscott, Wikinomics: How Mass Collaboration Changes Everything
+<li>B036 Henry David Thoreau, Walden
+<li>B037 Brain Tracy, Eat That Frog!
+<li>B038 Greg McKeown, Essentialism: The Disciplined Pursuit of Less
 <li><a href="books/B039.html">B039</a> Eliane E. Aron, The highly sensitive child, 2002
+<li>B040 Clayton Christensen, How will you measure your life?
 </ul>
 </body>
