--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -58,4 +58,12 @@
 <blockquote>
 杨伯峻《论语译注》：其是第三人称代词，指父母还是儿女有两说。
 </blockquote>
+
+<h3>为政2.7</h3>
+<pre>
+子由问孝。子曰：“今之孝者，是谓能养。至于犬马，皆能有养；不敬，何以别乎？”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：养从前人都读去声，声如漾。
+</blockquote>
 </body>
