--- a/the-analects/1.html
+++ b/the-analects/1.html
@@ -32,11 +32,19 @@
 “习”可以理解为当今意义上的“实践”。
 </blockquote>
 
+<blockquote>
+傅佩荣译：学了做人处事的道理，并在适当的时候印证练习，不也觉得高兴吗？志同道合的朋友从远方来相聚，不也感到快乐吗？别人不了解你，而你并不生气，不也是君子的风度吗？
+</blockquote>
+
 <h3>学而1.2</h3>
 
 <pre>有子曰：“其为人也孝弟，而好犯上者，鲜矣；不好犯上，而好作乱者，未之有也。君子务本，本立而道生。孝弟也者，其为人之本与！”</pre>
 <blockquote>杨伯峻《论语译注》：君子专心致力于基础工作，基础树立了，“道”就会产生。孝顺爹娘，敬爱兄长，这就是“仁”的基础吧！
 君子务本，这个本在不同时期有不同，但是一定要能抓住关键的、基本的东西。</blockquote>
+
+<blockquote>
+傅佩荣译：有子说：一个人能做到孝顺父母、尊敬兄长，却喜欢冒犯上司，那样的人很少有；不喜欢冒犯上司，却喜欢造反作乱，那样的人不曾有。君子要在根基上好好努力，根基稳固了，人生正途就会随之展现开来。孝顺父母与尊敬兄长，就是一个人做人的根基啊！
+</blockquote>
 
 <h3>学而1.3</h3>
 
@@ -44,34 +52,42 @@
 
 <blockquote>杨伯峻《论语译注》：令色：伪善的面貌。</blockquote>
 <blockquote>朱熹《论语集注》：好其言，善其色，致饰于外，务以说人。</blockquote>
+<blockquote>傅佩荣译：说话美妙而动听，表情讨好热络，这种人很少有真诚的心意。 傅佩荣论：一个人太重视自己外在的表达，就不会注意到自己内心是否真诚。在社交场合，有些人会说很多客套话，而心里却只是把别人当做达成目的的工具，所以对工具非常照顾（巧言令色）。这种价值观就叫做工具理性。这样一来，人与人之间只是互相利用，而没有真诚的情感。</blockquote>
 
 <h3>学而1.4</h3>
 
 <pre>曾子曰：“吾日三省吾身——为人谋而不忠乎？于朋友交而不信乎？传不习乎？”</pre>
 
 <blockquote>杨伯峻《论语译注》：信，诚也。习，同学而时习之的习。</blockquote>
+<blockquote>傅佩荣译：曾子说：我每天好几次这样省察自己：为别人办事，没有尽心尽力吗？与朋友来往，没有信守承诺吗？传授学生道理，没有印证练习吗？</blockquote>
 
 <h3>学而1.5</h3>
 
 <pre>子曰：“道千乘之国，敬事而信，节用而爱人，使民以时。”</pre>
 
 <blockquote>杨伯峻《论语译注》：千乘之国，在孔子之时已经不是大国了……古代“人”有广狭两义。广义的“人”指一切人群；狭义的人只指士大夫以上各阶层的人。这里和“民”对言，用的是狭义。</blockquote>
+<blockquote>傅佩荣译：孔子说：治理诸侯之国，要尽忠职守、令出必行，节省支出而爱护众人，选择适当的时候征用百姓服劳役。</blockquote>
 
 <h3>学而1.6</h3>
 
 <pre>子曰：“弟子，入则孝，出则悌，谨而信，泛爱众，而亲仁。行有余力，则以学文。”</pre>
 
 <blockquote>杨伯峻《论语译注》：弟子指年纪幼小的人。谨指寡言。</blockquote>
+<blockquote>傅佩荣译：孔子说：青少年在家要孝顺父母，出外要敬重兄长，行为谨慎而说话信实，普遍关怀别人而且亲近有善行芳表的人。认真做好这些事情，再去努力学习书本上的知识。</blockquote>
+<blockquote>傅佩荣论：学文列在最后，表示青少年应该先学会良好的行为规范，懂得做人的基本道理，而不可本末倒置，以为读书就是一切。</blockquote>
 
 <h3>学而1.7</h3>
 
 <pre>子夏曰：“贤贤易色；事父母，能竭其力；事君，能致其身；与朋友交，言而有信。虽曰未学，吾必谓之学矣。”</pre>
 
 <blockquote>杨伯峻《论语译注》：对妻子，重品德，不重美貌。这里“易色”采用的是《汉书·李寻传》颜师古《注》的说法。“致”指豁出生命。</blockquote>
+<blockquote>傅佩荣译：子夏说：对待妻子，重视品德而轻忽容貌；侍奉父母，能够尽心竭力；为君上服务，能够奋不顾身；与朋友交往，答应的事就守信用。这样的人，即使他说没有学习过，我也一定说他是学习过了。</blockquote>
 
 <h3>学而1.8</h3>
 
 <pre>子曰：“君子不重，则不威；学则不固。主忠信。无友不如己者。”</pre>
+<blockquote>傅佩荣译：孔子说：君子言行不庄重就没有威严，多方学习就不会流于固陋。以忠信为做人处事的原则，不与志趣不相似的人交往。有了过错，不怕去改正。</blockquote>
+<blockquote>傅佩荣论：“如”是指相似。志趣不相似，则无话可说。</blockquote>
 
 <h3>学而1.9</h3>
 
