--- a/books/B011.html
+++ b/books/B011.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <base href="https://taomaker.github.io/aaron-zhang.com/">
-<link href="https://latex.now.sh/lang/zh-hans.css" rel="stylesheet" />
+<link href="https://latex.now.sh/style.css" rel="stylesheet" />
 
 <title>The 4-Hour Workweek: Escape 9–5, Live Anywhere, and Join the New Rich</title>
 </head>
