--- a/the-analects/1.html
+++ b/the-analects/1.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <base href="https://taomaker.github.io/aaron-zhang.com/">
-<link href="https://latex.now.sh/lang/zh-hans.css" rel="stylesheet" />
+<link href="https://latex.now.sh/style.css" rel="stylesheet" />
 
 <title>学而1</title>
 </head>
