--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -32,6 +32,8 @@
 
 <blockquote>杨伯峻《论语译注》：思字在《诗经·鲁颂·駉（音同囧》本是无义的语首词，孔子引用它却当思想解，自是断章取义。</blockquote>
 
+<blockquote>傅佩荣：《诗经》三百篇，用一句话来概括，可以称之为“无不出于真情”。</blockquote>
+
 <h3>为政2.3</h3>
 
 <pre>子曰：“道之以政，齐之以刑，民免而无耻；道之以德，齐之以礼，有耻且格。”</pre>
