update books and analect

--- a/books/books.html
+++ b/books/books.html
@@ -24,6 +24,8 @@
 <li>S001 曹天元 上帝掷骰子吗：量子物理史话
 <li><a href="books/S002.html">S002</a> 周有光 我的人生故事
 <li><a href="books/S004.html">S004</a> 傅佩荣 国学的天空
+<li>S036 傅佩荣 解读易经
+<li>S037 傅佩荣 哲学与人生
 <li><a href="books/S049.html">S049</a> 山下英子 断舍离
 <li><a href="books/S056.html">S056</a> 博多·舍费尔 财务自由之路
 <li><a href="books/S062.html">S062</a> 心经
@@ -31,6 +33,9 @@
 <li>S064 Jared Diamond 枪炮、病菌与钢铁 Guns, Germs, and Steel (1997)
 <li>S065 麦肯锡教我的思考武器：从逻辑思考到真正解决问题 (2014)
 <li>S066 麦肯锡12堂工作思维课 
+<li>S067 超越感觉：批判性思考指南 Beyond feelings - a guide to critical thinking
+<li>S068 反脆弱-从不确定性中获益
+<li>S069 李敖自传
 </ul>
 
 <h3>English</h3>
@@ -55,6 +60,6 @@
 <li>B037 Brain Tracy, Eat That Frog!
 <li>B038 Greg McKeown, Essentialism: The Disciplined Pursuit of Less
 <li><a href="books/B039.html">B039</a> Eliane E. Aron, The highly sensitive child, 2002
-<li>B040 Clayton Christensen, How will you measure your life?
+<li><a href="books/B040.html">B040</a> Clayton Christensen, How will you measure your life? (2010)
 </ul>
 </body>
