--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -68,4 +68,12 @@
 <blockquote>
 杨伯峻《论语译注》：养从前人都读去声，声如漾。
 </blockquote>
+
+<h3>为政2.8</h3>
+<pre>
+子夏问孝。子曰：“色难。有事，弟子服其劳；有酒食，先生馔，曾食以为孝乎？”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：儿子在父母千经常有愉悦的容色，是件难事。有事情，年轻人孝老；有酒有肴，年长的人吃喝，难道这竟可认为是孝吗？
+</blockquote>
 </body>
