--- a/books/B011.html
+++ b/books/B011.html
@@ -44,3 +44,5 @@ Oct 2017
 <h3>Step III: A Is for Automation</h3>
 <blockquote>Creating demand is hard. Filling demand is much easier. Don’t create a product, then seek p.147</blockquote>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
