--- a/books/B012.html
+++ b/books/B012.html
@@ -74,3 +74,5 @@ Jan 2018
 
 <blockquote>As legendary hedge fund manager Ray Dalio told Tony Robbins ( page 210 ): “It’s almost certain that whatever you’re going to put your money in, there will come a day when you will lose 50% to 70%.” It pays to remember that if you lose 50%, you need a subsequent 100% return to get back to where you started. That math is tough. p379</blockquote>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
