--- a/books/B022.html
+++ b/books/B022.html
@@ -34,3 +34,5 @@ Jan 2019
 
 <blockquote>In some cases in which the subjects are just too complex for me to understand in the time required, I will turn over the decision making to knowledgeable others who are more believable than me, but I still want to listen in on their thoughtful disagreement. p.202</blockquote>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
