--- a/books/B023.html
+++ b/books/B023.html
@@ -28,3 +28,5 @@ Read November 2017
 
 <blockquote>Therefore, working is no positive reinforcement from your efforts until the end. If instead, you create a plan with a series of minor goals, even if some seem tangential to the main problem, you will make measurable progress toward a solution and feel that your time has been spent usefully. At the end of each work session, you’ll be able to check off items from your plan, gaining confidence that you will find a solution instead of growing increasingly frustrated. p.33</blockquote>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
