--- a/books/B039.html
+++ b/books/B039.html
@@ -116,3 +116,5 @@ Actually, when Suwen was about 2 years old, we often brought her to a park near 
 <h4>Other pointers for keeping school HSC-friendly, p.268</h4>
 <blockquote>Remeber that riding a school bus can be particularly difficult for HSCs.</blockquote>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
