--- a/books/S002.html
+++ b/books/S002.html
@@ -34,3 +34,5 @@
 
 <blockquote>p.345 毛泽东假如学多一点新知识，可以做许多好事情。他不仅没有到外国读书，看看他的书房里，都是平放的书，没有竖放的书，他没有新书，都是看老 的书。很可惜，他有一个很好的机会，结果自己破坏了。毛泽东去世，党中央说毛泽东一生做了两件大事情，第一件建立了新中国，第二件破坏了新中国。这话很有道理。</blockquote>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
