--- a/books/S062.html
+++ b/books/S062.html
@@ -44,3 +44,5 @@
 
 「色」字的意思是指「形態」、「影像」、「物質」，包括但並非單純指「美色」；而「空」字的意思為「無常」、「非固定」、「不恆久」，而非「沒有」或「空間」的意思；當佛經形容空間時會使用「虛空」而非單字「空」。所以整句的正確意思是：一切的「形態」、「影像」、「物質」都是「無常」、「非固定」、「不恆久」的。
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
