--- a/the-analects/12.html
+++ b/the-analects/12.html
@@ -30,3 +30,5 @@
 <blockquote>傅佩荣“主导自我意志”：克己复礼四个字的意思是“能够自己做主，去实践礼的规范”。孔子接着说：“走上人生正途是要靠自己的，难道还要靠别人吗？”换言之，人生的正途是“化被动为主动”，去实践一切规范，亦即自己该做的事。在此，关键有二：一是 明白 为何要有规范，二是主动 愿意 去照着做。把应该转化为愿意，人生就将全面改观，生命的活力也将源源不绝地涌现。</blockquote>
 
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
