--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -76,4 +76,14 @@
 <blockquote>
 杨伯峻《论语译注》：儿子在父母千经常有愉悦的容色，是件难事。有事情，年轻人孝老；有酒有肴，年长的人吃喝，难道这竟可认为是孝吗？
 </blockquote>
+
+<h3>为政2.9</h3>
+<pre>
+子曰：“吾与回言终日，不违，如愚。退而省其私，亦足以发，回也不愚。”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：不违——（他）从不提反对意见和疑问。
+</blockquote>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
