--- a/books/S004.html
+++ b/books/S004.html
@@ -22,3 +22,5 @@ April 2018
 
 <blockquote>孔子有一个学生叫子夏，说了一句很好的话。他说什么叫好学？“日知其所亡，月无忘其所能，可谓好学也已矣”，每天学习一点新东西，每个月再复习自己学过的，希望所学的没有忘记，这就是好 p.19</blockquote>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
