--- a/books/books.html
+++ b/books/books.html
@@ -63,3 +63,5 @@
 <li><a href="books/B040.html">B040</a> Clayton Christensen, How will you measure your life? (2010)
 </ul>
 </body>
+<hr>
+Copyright &copy Aaron Zhang 2022
