--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -84,6 +84,14 @@
 <blockquote>
 杨伯峻《论语译注》：不违——（他）从不提反对意见和疑问。
 </blockquote>
+
+<h3>为政2.10</h3>
+<pre>
+子曰：“视其所以，观其所由，察其所安。人焉廋哉？人焉廋哉？”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：廋音搜，隐藏，藏匿。考察一个人所结交的朋友；观察他为达到一定目的所采用的方式方法；了解他的心情，安于什么，不安于什么。
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
