correct articles link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>一个在波士顿工作的山东人，经历山东-武汉-香港-麻州，从事制造业供应链工作，热爱开源与各种新鲜科技。
 
-<p>点击查看我的<a href="articles/articles_cn.html">中文文章</a>
+<p>点击查看<a href="articles/articles.html">我的文章</a>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
