--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -92,6 +92,20 @@
 <blockquote>
 杨伯峻《论语译注》：廋音搜，隐藏，藏匿。考察一个人所结交的朋友；观察他为达到一定目的所采用的方式方法；了解他的心情，安于什么，不安于什么。
 </blockquote>
+
+<h3>为政2.11</h3>
+<pre>
+子曰：“温故而知新，可以为师矣。”
+</pre>
+
+<h3>为政2.12</h3>
+<pre>
+子曰：“君子不器。”
+</pre>
+
+<blockquote>
+杨伯峻《论语译注》：君子不像器皿一般（只有一定的用途）
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
