--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -106,6 +106,20 @@
 <blockquote>
 杨伯峻《论语译注》：君子不像器皿一般（只有一定的用途）
 </blockquote>
+
+<h3>为政2.13</h3>
+<pre>
+子贡问君子。子曰：“先行其言而后从之。”
+</pre>
+
+<h3>为政2.14</h3>
+<pre>
+子曰：“君子周而不比，小人比而不周。”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：周是以当时所谓道义来团结人，比则是以暂时共同利害互相勾结。比旧读去声如必。
+</blockquote>
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
