--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -119,6 +119,13 @@
 <blockquote>
 杨伯峻《论语译注》：周是以当时所谓道义来团结人，比则是以暂时共同利害互相勾结。比旧读去声如必。
 </blockquote>
+
+<h3>为政2.15</h3>
+<pre>
+子曰：“学而不思则罔，思而不学则怠。”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：罔是诬罔的意思。“学而不思”则受欺，似乎是《孟子·尽心下》“尽信书，不如无书”的意思。殆在论语礼有两个意义：“疑惑”，或者“危险”，这里取前一义。
 </blockquote>
 </body>
 <hr>
