--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -127,6 +127,14 @@
 <blockquote>
 杨伯峻《论语译注》：罔是诬罔的意思。“学而不思”则受欺，似乎是《孟子·尽心下》“尽信书，不如无书”的意思。殆在论语礼有两个意义：“疑惑”，或者“危险”，这里取前一义。
 </blockquote>
+
+<h3>为政2.16</h3>
+<pre>
+子曰：“攻乎异端，斯害也已。”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：《论语》共用四次“攻”字，其他三个都当“攻击”解，这里也不应例外。异端——孔子之时，自然还没有诸子百家，因之很难译为“不同的学说”，但和孔子相异的主张、言论未必没有，所以译为“不正确的一轮”。已——停止。
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
