--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -135,6 +135,14 @@
 <blockquote>
 杨伯峻《论语译注》：《论语》共用四次“攻”字，其他三个都当“攻击”解，这里也不应例外。异端——孔子之时，自然还没有诸子百家，因之很难译为“不同的学说”，但和孔子相异的主张、言论未必没有，所以译为“不正确的一轮”。已——停止。
 </blockquote>
+
+<h3>为政2.17</h3>
+<pre>
+子曰：“由！诲女知之乎！知之为知之，不知为不知，是知也。”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：由是仲由，字子路，小孔子九岁。是知也的知为“智”。
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
