update book list

--- a/books/books.html
+++ b/books/books.html
@@ -61,6 +61,15 @@
 <li>B038 Greg McKeown, Essentialism: The Disciplined Pursuit of Less
 <li><a href="books/B039.html">B039</a> Eliane E. Aron, The highly sensitive child, 2002
 <li><a href="books/B040.html">B040</a> Clayton Christensen, How will you measure your life? (2010)
+<li>B041 Jared Diamond, Guns, Germs and Steel: The Fates of Human Societies.
+<li>B042 Peter Drucker, The Effective Executive.
+<li>B043 Learning the Bash Shell, 2nd Edition.
+</ul>
+
+<h3>Shopping List</h3>
+<ul>
+<li>稻盛和夫的书全集10册
+<li>稻盛和夫的经营实学（精装版 套装共5册）
 </ul>
 </body>
 <hr>
