--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -143,6 +143,14 @@
 <blockquote>
 杨伯峻《论语译注》：由是仲由，字子路，小孔子九岁。是知也的知为“智”。
 </blockquote>
+
+<h3>为政2.18</h3>
+<pre>
+子张学干禄。子曰：“多闻阙疑，慎言其余。则寡尤；多间阙殆，慎行其余，则寡悔。言寡尤，行寡悔，禄在其中矣。”
+</pre>
+<blockquote>
+干：求也；禄，旧时管理的俸给。阙：有所保留；尤：错误。
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
