--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -149,7 +149,15 @@
 子张学干禄。子曰：“多闻阙疑，慎言其余。则寡尤；多间阙殆，慎行其余，则寡悔。言寡尤，行寡悔，禄在其中矣。”
 </pre>
 <blockquote>
-干：求也；禄，旧时管理的俸给。阙：有所保留；尤：错误。
+杨伯峻《论语译注》：干：求也；禄，旧时管理的俸给。阙：有所保留；尤：错误。
+</blockquote>
+
+<h3>为政2.19</h3>
+<pre>
+哀公问曰：“何为则民服？”孔子对曰：“举直错诸枉，则民服；举枉错诸直，则民不服。”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：举：提拔；错：放置；诸：之于。
 </blockquote>
 </body>
 <hr>
