--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -159,6 +159,14 @@
 <blockquote>
 杨伯峻《论语译注》：举：提拔；错：放置；诸：之于。
 </blockquote>
+
+<h3>为政2.20</h3>
+<pre>
+季康子问：“使民敬、忠以劝，如之何？”子曰：“临之以庄，则敬；孝慈，则忠；举善而教不能，则劝。”
+</pre>
+<blockquote>
+杨伯峻《论语译注》——季康子问到：“要使人民严肃认真，尽心竭力何互相勉励，应该怎么办呢？”孔子说：“你对待人民的事情严肃认真，他们对待你的政令也会严肃认真了；你孝顺父母，慈爱幼小，他们也就会对你尽心竭力了；你提拔好人，教育能力弱的人，他们也就会劝勉了。”
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
