--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <h3>Me in 10 Seconds</h3>
 
-<p>I'm a manufacturing operations professional. My education background is in Mechanical/Manufacturing Engineering. I enjoy all sorts of “manufacturing”: cooking, woodworking, film developing, but are keen in the conversion from bits to atoms, such as additive manufacturing, robotics. I'm a big fan of Vim, *nix, plain txt, and open source philosophy. I enjoy reading books and articles by Derek Sivers, Adam Grant, Yuval Harari, and Confucius.
+<p>I'm a manufacturing operations professional. My education background is in Mechanical/Manufacturing Engineering. I enjoy all sorts of “manufacturing”: cooking, woodworking, film developing, but are keen in the conversion from bits to atoms, such as additive manufacturing, robotics. I'm a big fan of Vim, *nix, plain txt, and open source philosophy. I enjoy reading books and articles by Derek Sivers, Yuval Harari, and Confucius.
 
 <h3>Me in 10 Minutes</h3>
 
