--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -167,6 +167,14 @@
 <blockquote>
 杨伯峻《论语译注》——季康子问到：“要使人民严肃认真，尽心竭力何互相勉励，应该怎么办呢？”孔子说：“你对待人民的事情严肃认真，他们对待你的政令也会严肃认真了；你孝顺父母，慈爱幼小，他们也就会对你尽心竭力了；你提拔好人，教育能力弱的人，他们也就会劝勉了。”
 </blockquote>
+
+<h3>为政2.21</h3>
+<pre>
+或谓孔子曰：“子奚不为政？”子曰：“《书》云：‘孝乎惟孝，友于兄弟，施于有政。’是亦为政，奚其为为政？”
+</pre>
+<blockquote>
+奚其为为政：为什么定要做官才算参与政治呢？
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
