--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -173,7 +173,15 @@
 或谓孔子曰：“子奚不为政？”子曰：“《书》云：‘孝乎惟孝，友于兄弟，施于有政。’是亦为政，奚其为为政？”
 </pre>
 <blockquote>
-奚其为为政：为什么定要做官才算参与政治呢？
+杨伯峻《论语译注》：奚其为为政：为什么定要做官才算参与政治呢？
+</blockquote>
+
+<h3>为政2.22</h3>
+<pre>
+子曰：“人而无信，不知其可也。大车无輗，小车无軏，其何以行之哉？”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：而”不能当如果讲，翻译成“作为一个人，却不讲信誉”。輗音倪；軏音月，是大小车横木两头的活销，是关键。
 </blockquote>
 </body>
 <hr>
