--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -183,6 +183,14 @@
 <blockquote>
 杨伯峻《论语译注》：而”不能当如果讲，翻译成“作为一个人，却不讲信誉”。輗音倪；軏音月，是大小车横木两头的活销，是关键。
 </blockquote>
+
+<h3>为政2.23</h3>
+<pre>
+子张问：“十世可知也？”子曰：“殷因于夏礼，所损益，可知也；周因于殷礼，所损益，可知也。其或继周者，虽百世，可知也。”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：今后时代（的礼仪制度）可以预先知道吗？
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
