update book list

--- a/books/books.html
+++ b/books/books.html
@@ -64,6 +64,7 @@
 <li>B041 Jared Diamond, Guns, Germs and Steel: The Fates of Human Societies.
 <li>B042 Peter Drucker, The Effective Executive.
 <li>B043 Learning the Bash Shell, 2nd Edition.
+<li>B044 Vivian Maier, Street Photographer
 </ul>
 
 <h3>Shopping List</h3>
