--- a/books/books.html
+++ b/books/books.html
@@ -65,6 +65,7 @@
 <li>B042 Peter Drucker, The Effective Executive.
 <li>B043 Learning the Bash Shell, 2nd Edition.
 <li>B044 Vivian Maier, Street Photographer
+<li>B045 Leo Babauta, Zen to Done
 </ul>
 
 <h3>Shopping List</h3>
