--- a/books/books.html
+++ b/books/books.html
@@ -3,9 +3,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <base href="https://taomaker.github.io/aaron-zhang.com/">
-<link href="style.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://classless.de/classless.css">`
 
-<title>My Library 我的图书馆</title>
+<title></title>
 </head>
 
 <body>
@@ -36,6 +36,7 @@
 <li>S067 超越感觉：批判性思考指南 Beyond feelings - a guide to critical thinking
 <li>S068 反脆弱-从不确定性中获益
 <li>S069 李敖自传
+<li>S070 呼吸革命 James Nestor, Breath: The New Science of a Lost Art
 </ul>
 
 <h3>English</h3>
