--- a/books/B011.html
+++ b/books/B011.html
@@ -3,9 +3,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <base href="https://taomaker.github.io/aaron-zhang.com/">
-<link href="style.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://classless.de/classless.css">`
 
-<title>The 4-Hour Workweek: Escape 9–5, Live Anywhere, and Join the New Rich</title>
+<title></title>
 </head>
 
 <body>
