--- a/books/S002.html
+++ b/books/S002.html
@@ -3,9 +3,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <base href="https://taomaker.github.io/aaron-zhang.com/">
-<link href="style.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://classless.de/classless.css">`
 
-<title>周有光《我的人生故事》</title>
+<title></title>
 </head>
 
 <body>
