--- a/books/S002.html
+++ b/books/S002.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<p><a href="index.html">Home</a>
+<nav><a href="index.html">Home</a>
  | <a href="articles/articles.html">Articles</a>
  | <a href="about.html">About Me</a>
-</p>
+</nav>
 
 <hr>
 <h2>周有光《我的人生故事》</h2>
