--- a/books/S056.html
+++ b/books/S056.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<p><a href="index.html">Home</a>
+<nav><a href="index.html">Home</a>
  | <a href="articles/articles.html">Articles</a>
  | <a href="about.html">About Me</a>
-</p>
+</nav>
 
 <hr>
 <h2>博多.舍费尔	财务自由之路</h2>
