--- a/books/S063.html
+++ b/books/S063.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<p><a href="index.html">Home</a>
+<nav><a href="index.html">Home</a>
  | <a href="articles/articles.html">Articles</a>
  | <a href="about.html">About Me</a>
-</p>
+</nav>
 
 <hr>
 <h2>硅谷钢铁侠: 埃隆·马斯克的冒险人生</h2>
