--- a/books/books.html
+++ b/books/books.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<p><a href="index.html">Home</a>
+<nav><a href="index.html">Home</a>
  | <a href="articles/articles.html">Articles</a>
  | <a href="about.html">About Me</a>
-</p>
+</nav>
 
 <hr>
 <h2>My Library 我的图书馆</h2>
