--- a/the-analects/5.html
+++ b/the-analects/5.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<p><a href="index.html">Home</a>
+<nav><a href="index.html">Home</a>
  | <a href="articles/articles.html">Articles</a>
  | <a href="about.html">About Me</a>
-</p>
+</nav>
 
 <hr>
 <h2>公冶长5</h2>
