change table style

--- a/books/books.html
+++ b/books/books.html
@@ -17,63 +17,57 @@
 
 <hr>
 <h2>My Library 我的图书馆</h2>
-
-<h3>中文书</h3>
-
-<ul>
-<li>S001 曹天元 上帝掷骰子吗：量子物理史话
-<li><a href="books/S002.html">S002</a> 周有光 我的人生故事
-<li><a href="books/S004.html">S004</a> 傅佩荣 国学的天空
-<li>S036 傅佩荣 解读易经
-<li>S037 傅佩荣 哲学与人生
-<li><a href="books/S049.html">S049</a> 山下英子 断舍离
-<li><a href="books/S056.html">S056</a> 博多·舍费尔 财务自由之路
-<li><a href="books/S062.html">S062</a> 心经
-<li><a href="books/S063.html">S063</a> 硅谷钢铁侠: 埃隆·马斯克的冒险人生
-<li>S064 Jared Diamond 枪炮、病菌与钢铁 Guns, Germs, and Steel (1997)
-<li>S065 麦肯锡教我的思考武器：从逻辑思考到真正解决问题 (2014)
-<li>S066 麦肯锡12堂工作思维课 
-<li>S067 超越感觉：批判性思考指南 Beyond feelings - a guide to critical thinking
-<li>S068 反脆弱-从不确定性中获益
-<li>S069 李敖自传
-<li>S070 呼吸革命 James Nestor, Breath: The New Science of a Lost Art
-</ul>
-
-<h3>English</h3>
-
-<ul>
-<li><a href="books/B009.html">B009</a> Adele Daber, How to Talk So Kids Will Listen and Listen So Kids Will Talk
-<li><a href="books/B011.html">B011</a> Tim Ferriss, The 4-hour Workbook
-<li><a href="books/B012.html">B012</a> Tim Ferriss, Tools of Titans
-<li>B013 Tim Ferriss, The 4-hour body
-<li>B014 Victor Frankl, Man's search for meaning
-<li>B015 Steven Weber, The success of open source
-<li>B016 Peter Thiel, Zero to one
-<li>B017 Cal Newport, So good they can't ignore you
-<li>B018 Walter Issacson, Steve Jobs
-<li>B019 Guy Kawasaki, The art of the start
-<li>B020 Robert C. Pozen, Extreme productivity
-<li><a href="books/B022.html">B022</a> Ray Dalio, Principles
-<li><a href="books/B023.html">B023</a> V.Anton Spraul, Think Like a Programmer: An Introduction to Creative Problem Solving
-<li>B034 William Strunk, The Elements of Style
-<li>B035 Don Tapscott, Wikinomics: How Mass Collaboration Changes Everything
-<li>B036 Henry David Thoreau, Walden
-<li>B037 Brain Tracy, Eat That Frog!
-<li>B038 Greg McKeown, Essentialism: The Disciplined Pursuit of Less
-<li><a href="books/B039.html">B039</a> Eliane E. Aron, The highly sensitive child, 2002
-<li><a href="books/B040.html">B040</a> Clayton Christensen, How will you measure your life? (2010)
-<li>B041 Jared Diamond, Guns, Germs and Steel: The Fates of Human Societies.
-<li>B042 Peter Drucker, The Effective Executive.
-<li>B043 Learning the Bash Shell, 2nd Edition.
-<li>B044 Vivian Maier, Street Photographer
-<li>B045 Leo Babauta, Zen to Done
-</ul>
-
-<h3>Shopping List</h3>
-<ul>
-<li>稻盛和夫的书全集10册
-<li>稻盛和夫的经营实学（精装版 套装共5册）
-</ul>
+<table>
+<tr> <th>编码</th> <th>作者</th> <th>书名</th> <th>出版年</th> </tr>
+<tr> <td>B001 <td>曹天元	<td>上帝掷骰⼦吗：量⼦物理史话 <td>
+<tr> <td>B002 <td>周有光	<td>我的⼈⽣故事 <td> 
+<tr> <td>B003 <td>稻盛和夫 <td>心 <td> 
+<tr> <td>B004 <td>傅佩荣	<td>国学的天空 <td>
+<tr> <td>B005 <td>George Orwell	<td>1984 <td>
+<tr> <td>B006 <td>冯唐	<td>北京，北京 <td> 
+<tr> <td>B007 <td>George Orwell <td>动物庄园 Animal Farm <td>
+<tr><td>B008 <td>冯唐 <td>十八岁给我一个姑娘<td>
+<tr><td>B009 <td>丰子恺 <td>活着本来单纯 <td>
+<tr><td>B010 <td>三毛 <td>万水千山走遍 <td>
+<tr><td>B036 <td>傅佩荣 <td>解读易经 <td>
+<tr><td>B037 <td>傅佩荣 <td>哲学与人生 <td>
+<tr><td><a href="books/B049.html">B049</a> <td>山下英子 <td>断舍离<td>
+<tr><td><a href="books/B056.html">B056</a> <td>博多·舍费尔 <td>财务自由之路<td>
+<tr><td><a href="books/S062.html">S062</a> <td><td>心经 <td>
+<tr><td><a href="books/S063.html">S063</a> <td><td>硅谷钢铁侠: 埃隆·马斯克的冒险人生 <td>
+<tr><td>B064 <td>Jared Diamond <td>枪炮、病菌与钢铁 Guns, Germs, and Steel <td>1997
+<tr><td>B065 <td><td>麦肯锡教我的思考武器：从逻辑思考到真正解决问题 <td>2014
+<tr><td>B066 <td><td>麦肯锡12堂工作思维课 <td>
+<tr><td>B067 <td><td>超越感觉：批判性思考指南 Beyond feelings - a guide to critical thinking<td>
+<tr><td>B068 <td><td>反脆弱-从不确定性中获益<td>
+<tr><td>B069 <td><td>李敖自传<td>
+<tr><td>B070 <td>James nestor<td>呼吸革命 Breath: The New Science of a Lost Art<td>
+<tr><td>B071 <td>Yuval Harari<td>未来简史 21 Lessons for the 21st Century <td>
+<tr><td><a href="books/B109.html">B109</a> <td>Adele Daber <td>How to Talk So Kids Will Listen and Listen So Kids Will Talk <td>
+<tr><td><a href="books/B111.html">B111</a> <td>Tim Ferriss <td>The 4-hour Workbook<td>
+<tr><td><a href="books/B112.html">B112</a> <td>Tim Ferriss <td>Tools of Titans<td>
+<tr><td>B113 <td>Tim Ferriss <td>The 4-hour body <td>
+<tr><td>B114 <td>Victor Frankl <td>Man's search for meaning <td>
+<tr><td>B115 <td>Steven Weber <td>The success of open source <td>
+<tr><td>B116 <td>Peter Thiel <td>Zero to one<td>
+<tr><td>B117 <td>Cal Newport <td>So good they can't ignore you<td>
+<tr><td>B118 <td>Walter Issacson <td>Steve Jobs<td>
+<tr><td>B119 <td>Guy Kawasaki <td>The art of the start<td>
+<tr><td>B120 <td>Robert C. Pozen <td>Extreme productivity <td>
+<tr><td><a href="books/B122.html">B122</a> <td>Ray Dalio <td>Principles<td>
+<tr><td><a href="books/B123.html">B123</a> <td>V.Anton Spraul <td>Think Like a Programmer: An Introduction to Creative Problem Solving<td>
+<tr><td>B134 <td>William Strunk <td>The Elements of Style<td>
+<tr><td>B135 <td>Don Tapscott <td>Wikinomics: How Mass Collaboration Changes Everything<td>
+<tr><td>B136 <td>Henry David Thoreau <td>Walden <td>
+<tr><td>B137 <td>Brain Tracy <td>Eat That Frog! <td>
+<tr><td>B138 <td>Greg McKeown <td>Essentialism: The Disciplined Pursuit of Less <td>
+<tr><td><a href="books/B139.html">B139</a> <td>Eliane E. Aron <td>The highly sensitive child <td>2002
+<tr><td><a href="books/B140.html">B140</a> <td>Clayton Christensen <td>How will you measure your life? <td>2010
+<tr><td>B142 <td>Peter Drucker <td>The Effective Executive <td>
+<tr><td>B143 <td><td>Learning the Bash Shell, 2nd Edition <td>
+<tr><td>B144 <td>Vivian Maier <td>Street Photographer <td>
+<tr><td>B145 <td>Leo Babauta <td>Zen to Done <td>
+</table>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
