--- a/the-analects/2.html
+++ b/the-analects/2.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<base href="https://taomaker.github.io/aaron-zhang.com/">
+<!-- <base href="https://taomaker.github.io/aaron-zhang.com/"> -->
 <link rel="stylesheet" href="style.css">
 
 <title></title>
@@ -191,6 +191,10 @@
 <blockquote>
 杨伯峻《论语译注》：今后时代（的礼仪制度）可以预先知道吗？
 </blockquote>
+
+<h3>为政2.24</h3>
+<pre>子曰：“非其鬼而祭之，谄也。见义不为，无勇也。” </pre>
+<blockquote>杨伯峻《论语译注》：古代人死都叫“鬼”。谄音产，谄媚，阿谀。</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
