--- a/the-analects/3.html
+++ b/the-analects/3.html
@@ -16,13 +16,13 @@
 </nav>
 
 <hr>
-<h2>公冶长5</h2>
+<meta charset="utf-8"> 
 
-<pre>十室之邑，必有忠信如丘者焉，不如丘之好学也。</pre>
+<h2>八佾3</h2>
 
-<blockquote>
-傅佩荣：有十家人的地方，必定有忠信如我的人，但却不像我这么好学。
-</blockquote>
+<h3>八佾3.1</h3>
+<pre>孔子谓季氏，“八佾舞于庭，是可忍也，孰不可忍也？”</pre>
+<blockquote></blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
