update classics and analects

--- a/the-analects/3.html
+++ b/the-analects/3.html
@@ -20,8 +20,16 @@
 
 <h2>八佾3</h2>
 
-<h3>八佾3.1</h3>
+<h3>3.1</h3>
 <pre>孔子谓季氏，“八佾舞于庭，是可忍也，孰不可忍也？”</pre>
+<blockquote>杨伯峻《论语译注》：佾音逸。古代舞蹈奏乐，八个人为一行，这一行叫一佾。忍——一般人把它解为“容忍”、忍耐，不好。《贾子·道术篇》：“恻隐怜人谓之慈，反慈为忍。”这“忍”正是此意。（就是狠心的意思）</blockquote>
+
+<h3>3.2</h3>
+<pre>三家者以《雍》彻。子曰：“‘相维辟公，天子穆穆’，奚取于三家之堂？”</pre>
+<blockquote>杨伯峻《论语译注》：仲孙、叔孙、季孙三家，当他们祭祀祖先时候，〔也用天子的礼〕唱着《雍》这篇诗来撤出祭品。孔子说：“〔《雍》诗上有这样的话：‘助祭的是诸侯，天子严肃静默地在那儿主祭。’这两句话，用在三家祭祖的大厅上在意义上取它哪一点呢？”</blockquote>
+
+<h3>3.3</h3>
+<pre>子曰：“人而不仁，如礼何？人而不仁，如乐何？”</pre>
 <blockquote></blockquote>
 </body>
 <hr>
