--- a/books/books.html
+++ b/books/books.html
@@ -30,6 +30,7 @@
 <tr><td>B009 <td>丰子恺 <td>活着本来单纯 <td>
 <tr><td>B010 <td>三毛 <td>万水千山走遍 <td>
 <tr><td>B011 <td>杨伯峻 <td>论语译注 <td>1958
+<tr><td>B012 <td>叶嘉莹<td>叶嘉莹说陶渊明杜甫李商隐三家诗 <td>2007
 <tr><td>B036 <td>傅佩荣 <td>解读易经 <td>
 <tr><td>B037 <td>傅佩荣 <td>哲学与人生 <td>
 <tr><td><a href="books/B049.html">B049</a> <td>山下英子 <td>断舍离<td>
