--- a/the-analects/the-analects.html
+++ b/the-analects/the-analects.html
@@ -21,6 +21,7 @@
 <ol>
 <li><a href="the-analects/1.html">学而</a>
 <li><a href="the-analects/2.html">为政</a>
+<li><a href="the-analects/3.html">八佾</a>
 </ol>
 </body>
 <hr>
