--- a/the-analects/3.html
+++ b/the-analects/3.html
@@ -30,7 +30,13 @@
 
 <h3>3.3</h3>
 <pre>子曰：“人而不仁，如礼何？人而不仁，如乐何？”</pre>
-<blockquote></blockquote>
+
+<h3>3.4</h3>
+<pre>
+林放问礼之本
+子曰：“大哉问！礼，与其奢也，宁简；丧，与其易也，宁戚。”
+</pre>
+<blockquote>杨伯峻《论语译注》：易：把事情办妥，周到；戚：过度伤悲。</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
