--- a/classics/classics.html
+++ b/classics/classics.html
@@ -18,11 +18,13 @@
 <hr>
 <h2>Classics 古典文学作品</h2>
 <p>我自己搜寻整理的古典文学赏析。
-<ol>
-<li><a href="classics/taoyuanming.html">陶渊明</a>
-<li>杜甫
-<li>李商隐
-</ol>
+<ul>
+<li><a href="classics/19.html">古诗十九首</a> 东汉
+<li>曹操 155-220 东汉
+<li><a href="classics/taoyuanming.html">陶渊明</a> ~365-427，东晋至南朝宋
+<li>杜甫 712-770 唐
+<li>李商隐 813~858 唐
+</ul>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
