--- a/classics/taoyuanming.html
+++ b/classics/taoyuanming.html
@@ -33,23 +33,38 @@
 
 </pre>
 
-<blockquote>
 叶嘉莹说陶渊明杜甫李商隐三家诗：
+<blockquote>
+<p>诗既然要表现自己的情志，那么你的内心首先就要真的有一种“摇荡性情”的感动。所谓“情动于中”，那个“动”字是最重要的。我又说，中国诗歌特别重视一种直接的感发何感动的力量————“兴”的作用，这是它与西方诗歌一个主要的不同点……“比”和“兴”有什么不同呢？“兴”是外物直接使我们兴发感动，是见物起兴，由物及心；“比”是内心先有一种情意，然后借用外物来做比方，是由心及物。
 
-诗既然要表现自己的情志，那么你的内心首先就要真的有一种“摇荡性情”的感动。所谓“情动于中”，那个“动”字是最重要的。我又说，中国诗歌特别重视一种直接的感发何感动的力量————“兴”的作用，这是它与西方诗歌一个主要的不同点……“比”和“兴”有什么不同呢？“兴”是外物直接使我们兴发感动，是见物起兴，由物及心；“比”是内心先有一种情意，然后借用外物来做比方，是由心及物。
+<p>一首诗若是能果然传达出一种使人兴发感动的力量，它就是成功的诗……因此诗人的条件第一是能感之，第二是能写之。
 
-一首诗若是能果然传达出一种使人兴发感动的力量，它就是成功的诗……因此诗人的条件第一是能感之，第二是能写之。
+<p>我并不是想藉讲诗来说教，说教不是诗歌的目的，诗歌的目的是使大家的内心真正得到感动。所以，我不是以道德和伦理的标准来选诗的，我的标准第一先要是好诗……同样是成功的诗篇，哪一个的层次更高，那就在于它所传达的那种感发生命的大小、厚薄、深浅和广狭。
 
-我并不是想藉讲诗来说教，说教不是诗歌的目的，诗歌的目的是使大家的内心真正得到感动。所以，我不是以道德和伦理的标准来选诗的，我的标准第一先要是好诗……同样是成功的诗篇，哪一个的层次更高，那就在于它所传达的那种感发生命的大小、厚薄、深浅和广狭。
+<p>《论语·宪问》曾记载有人批评孔子说：“丘何为是栖栖者欤？”————孔丘你这个家伙，人家都舒舒服服地吃饱了睡觉，你干嘛要在列国之间东奔西跑，总想找到一个地方实现你的理想呢？……因此“栖栖”就增加了象喻的意思。
 
-《论语·宪问》曾记载有人批评孔子说：“丘何为是栖栖者欤？”————孔丘你这个家伙，人家都舒舒服服地吃饱了睡觉，你干嘛要在列国之间东奔西跑，总想找到一个地方实现你的理想呢？……因此“栖栖”就增加了象喻的意思。
+<p>一首好的诗歌，它的所有形象总是要集中指向同一感发作用的焦点……黄昏已经是人归家、鸟还巢的时候了，可这只栖栖的不安的鸟还在飞，这就已经传达出一种孤独寂寞的悲哀，也表现了一种独自飞翔的勇气……“转”者，是中间有所变化。也就是说，不是同样的悲，而是一夜比一夜更加悲哀了……‘依依’不是对过去的怀恋，而是对未来的寻求向往。
 
-一首好的诗歌，它的所有形象总是要集中指向同一感发作用的焦点……黄昏已经是人归家、鸟还巢的时候了，可这只栖栖的不安的鸟还在飞，这就已经传达出一种孤独寂寞的悲哀，也表现了一种独自飞翔的勇气……“转”者，是中间有所变化。也就是说，不是同样的悲，而是一夜比一夜更加悲哀了……‘依依’不是对过去的怀恋，而是对未来的寻求向往。
-
-“翮”是长着硬羽毛的翅膀；“敛”就是收。
+<p>“翮”是长着硬羽毛的翅膀；“敛”就是收。
 
 </blockquote>
 
+<h3>咏贫士七首之一</h3>
+
+<pre>
+万族各有托，孤云独无依。
+暧暧空中灭，何时见馀晖。
+朝霞开宿雾，众鸟相与飞。
+迟迟出林翮，未夕复来归。
+量力守故辙，岂不寒与饥？
+知音苟不存，已矣何所悲。
+</pre>
+
+叶嘉莹说陶渊明杜甫李商隐三家诗：
+<blockquote>
+<p>他（陶渊明）说：“知音苟不存，已矣何所悲。”——你们说我好或者说我坏有什么关系！只要我确实尽了最大的努力去追求完美，我不管你们是不是理解我。白居易写诗一定要念给老太婆听一听，追求平易、通俗，“老妪都解”；杜甫则“语不惊人死不休”；而陶渊明则既不避免平顺的、无变化的句法，也能写出随着意念的流动而跳接的句子。在中国所有的诗人里面，真正能够不雕琢、不修饰、不逞才、不使气，以最真诚的态度来写诗的，也就要数陶渊明了……我们所看到的这两首诗的不同结构，正是表现了陶渊明这份完全以淳真的面目和世人相见的基本态度。所以元遗山在他的《论诗绝句三十首》之中有一首论陶渊明说：“一语天然万古新，豪华落尽见真淳。”
+<p>“万族各有托，孤云独无依。暧暧空中灭，何时见余晖。”我以为，在中国的诗歌里写到人类生命的孤独、寂寞、短暂、无常，没有比这四句更深刻、更沉痛的了！我去年在这个礼堂讲过李后主的一首词：“林花谢了春红，太匆匆。无奈朝来寒雨晚来风。”这几句写人生的短暂无常写得很感人。可是朱自清先生说了：“桃花谢了，还有再开的时候；燕子去了，还有再来的时候。”李煜所写的花虽然谢了，明年还可以再开，可是只有陶渊明写的这种无常和孤独才是真正可怕的无常和孤独！宇宙间草木鸟兽各种品类都有它的托身之所……而最孤独的，之后天上孤飞的那一朵云……饥饿和寒冷诗切身的痛苦，可是如果违背自己的本性去做那种贪赃枉法、堕落败坏的事情，我觉得比饥饿寒冷更痛苦。
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
