--- a/the-analects/3.html
+++ b/the-analects/3.html
@@ -37,6 +37,12 @@
 子曰：“大哉问！礼，与其奢也，宁简；丧，与其易也，宁戚。”
 </pre>
 <blockquote>杨伯峻《论语译注》：易：把事情办妥，周到；戚：过度伤悲。</blockquote>
+
+<h3>3.5</h3>
+<pre>
+子曰：“夷狄之有君，不如诸夏之亡也。”
+</pre>
+<blockquote>亡同“无”。</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
