--- a/the-analects/3.html
+++ b/the-analects/3.html
@@ -43,6 +43,17 @@
 子曰：“夷狄之有君，不如诸夏之亡也。”
 </pre>
 <blockquote>亡同“无”。</blockquote>
+
+<h3>3.6</h3>
+<pre>
+季氏旅于泰山。
+子谓冉有曰：“女弗能救与？”
+对曰：“不能。”
+子曰：“呜呼！曾谓泰山不如林放乎？”
+</pre>
+<blockquote>
+杨伯峻《论语译注》：旅——动词，祭山。在当时，只有天子和诸侯才有祭祀名山大川的资格。季氏只是鲁国的大夫。冉有当时在季氏之下做事。“女弗能救与”——你不能阻止吗？
+</blockquote>
 </body>
 <hr>
 Copyright &copy Aaron Zhang 2022
